A row (Tearms) is align and padding is repair.and looking good

--- a/css/style.css
+++ b/css/style.css
@@ -180,7 +180,7 @@ nav a#pull {
 .teams-h{
 	width: 100%; 
 	justify-content: center;
-	padding: 5%;
+	padding: 2%;
 }
 .teams-h h3{
 	margin: 0;
